--- a/goombasav_clr/goombasav_clr.vcxproj.filters
+++ b/goombasav_clr/goombasav_clr.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MainForm.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\goombasav.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\minilzo-2.06\minilzo.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="clrmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
