Add -L to show license (as well as GitHub URL and platform compiled on)

--- a/goombasav.vcxproj.filters
+++ b/goombasav.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="goombasav.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="platformname.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
