--- a/goombasav.vcxproj
+++ b/goombasav.vcxproj
@@ -80,6 +80,7 @@
     <ClCompile Include="minilzo-2.06\minilzo.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="platformname.h" />
     <ClInclude Include="goombasav.h" />
     <ClInclude Include="minilzo-2.06\lzoconf.h" />
     <ClInclude Include="minilzo-2.06\lzodefs.h" />
