add an icon to the program

--- a/goombasav_clr/goombasav_clr.vcxproj
+++ b/goombasav_clr/goombasav_clr.vcxproj
@@ -99,6 +99,7 @@
     <ClInclude Include="MainForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="AboutForm.resx">
@@ -107,6 +108,12 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.h</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="goombasav_clr.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="goombasav.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
