--- a/goombasav_clr/goombasav_clr.vcxproj.filters
+++ b/goombasav_clr/goombasav_clr.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="AboutForm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GoombaSRAM.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainForm.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GoombaSRAM.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
