--- a/goombasav_clr/goombasav_clr.vcxproj
+++ b/goombasav_clr/goombasav_clr.vcxproj
@@ -18,7 +18,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v120_xp</PlatformToolset>
     <CLRSupport>true</CLRSupport>
@@ -57,8 +57,8 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies />
-      <EntryPointSymbol>
-      </EntryPointSymbol>
+      <SubSystem>Windows</SubSystem>
+      <EntryPointSymbol>main</EntryPointSymbol>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -86,7 +86,6 @@
     <ClCompile Include="..\minilzo-2.06\minilzo.c" />
     <ClCompile Include="AboutForm.cpp" />
     <ClCompile Include="clrmain.cpp" />
-    <ClCompile Include="GoombaSRAM.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\goombasav.h" />
@@ -96,7 +95,6 @@
     <ClInclude Include="AboutForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
-    <ClInclude Include="GoombaSRAM.h" />
     <ClInclude Include="HeaderPtr.h" />
     <ClInclude Include="MainForm.h">
       <FileType>CppForm</FileType>
