allow clean in constructor

--- a/goombasav_net/goombasav_net.vcxproj
+++ b/goombasav_net/goombasav_net.vcxproj
@@ -81,6 +81,7 @@
     <ClCompile Include="..\goombasav.c" />
     <ClCompile Include="..\minilzo-2.06\minilzo.c" />
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="expose.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\goombasav.h" />
