--- a/goombasav_net/goombasav_net.vcxproj.filters
+++ b/goombasav_net/goombasav_net.vcxproj.filters
@@ -32,9 +32,6 @@
     <ClInclude Include="GoombaSRAM.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="HeaderPtr.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\goombasav.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -45,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\minilzo-2.06\minilzo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Stateheader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
