--- a/goombasav_net/goombasav_net.vcxproj
+++ b/goombasav_net/goombasav_net.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="..\minilzo-2.06\lzoconf.h" />
     <ClInclude Include="..\minilzo-2.06\lzodefs.h" />
     <ClInclude Include="..\minilzo-2.06\minilzo.h" />
+    <ClInclude Include="GoombaHeader.h" />
     <ClInclude Include="GoombaSRAM.h" />
     <ClInclude Include="Stateheader.h" />
   </ItemGroup>
