Add Configdata class - list in GoombaSRAM can store either

--- a/goombasav_net/goombasav_net.vcxproj.filters
+++ b/goombasav_net/goombasav_net.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="GoombaHeader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Configdata.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
