--- a/goombasav_net/goombasav_net.vcxproj.filters
+++ b/goombasav_net/goombasav_net.vcxproj.filters
@@ -21,10 +21,10 @@
     <ClCompile Include="..\goombasav.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\minilzo-2.06\minilzo.c">
+    <ClCompile Include="expose.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="expose.cpp">
+    <ClCompile Include="..\minilzo\minilzo.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
