Show checksum and rom title when extracting a GB/GBC ROM, and set the default export filename to the .gba filename if there's only one ROM inside

--- a/goombasav_net/goombasav_net.vcxproj
+++ b/goombasav_net/goombasav_net.vcxproj
@@ -93,7 +93,7 @@
     <ClInclude Include="..\minilzo-2.06\minilzo.h" />
     <ClInclude Include="Configdata.h" />
     <ClInclude Include="GoombaHeader.h" />
-    <ClInclude Include="ExtractedGBROM.h" />
+    <ClInclude Include="GBROM.h" />
     <ClInclude Include="GoombaSRAM.h" />
     <ClInclude Include="Stateheader.h" />
   </ItemGroup>
