Rename GBROM to GameBoyROM in C++/CLI code

--- a/goombasav_net/goombasav_net.vcxproj
+++ b/goombasav_net/goombasav_net.vcxproj
@@ -93,8 +93,8 @@
     <ClInclude Include="..\minilzo-2.06\minilzo.h" />
     <ClInclude Include="Configdata.h" />
     <ClInclude Include="GoombaHeader.h" />
-    <ClInclude Include="GBROM.h" />
-    <ClInclude Include="GoombaSRAM.h" />
+    <ClInclude Include="cli_GameBoyROM.h" />
+    <ClInclude Include="cli_GoombaSRAM.h" />
     <ClInclude Include="Stateheader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
