Create ExtractedROM interface

--- a/goombasav_net/goombasav_net.vcxproj.filters
+++ b/goombasav_net/goombasav_net.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="cli_GoombaSRAM.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cli_ExtractedROM.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
