Add files to prepare for PocketNES rom support

--- a/goombasav_gtk/goombasav_gtk.vcxproj.filters
+++ b/goombasav_gtk/goombasav_gtk.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="..\minilzo-2.06\minilzo.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\pocketnesrom.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\goombasav.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\minilzo-2.06\minilzo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\pocketnesrom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
