--- a/goombasav_net/goombasav_net.vcxproj.filters
+++ b/goombasav_net/goombasav_net.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\goombarom.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\pocketnesrom.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\goombasav.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="cli_ExtractedROM.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\pocketnesrom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
