Add the ability to extract NES ROMs from PocketNES ROMs (uncompressed only)

--- a/goombasav_net/goombasav_net.vcxproj.filters
+++ b/goombasav_net/goombasav_net.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClInclude Include="cli_Stateheader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cli_PocketNESROM.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
