--- a/goombasav_net/goombasav_net.vcxproj
+++ b/goombasav_net/goombasav_net.vcxproj
@@ -98,6 +98,7 @@
     <ClInclude Include="cli_GoombaHeader.h" />
     <ClInclude Include="cli_GameBoyROM.h" />
     <ClInclude Include="cli_GoombaSRAM.h" />
+    <ClInclude Include="cli_PocketNESROM.h" />
     <ClInclude Include="cli_Stateheader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
