--- a/goombasav_gtk/goombasav_gtk.vcxproj
+++ b/goombasav_gtk/goombasav_gtk.vcxproj
@@ -87,15 +87,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\goombasav.c" />
-    <ClCompile Include="..\minilzo-2.06\minilzo.c" />
+    <ClCompile Include="..\minilzo\minilzo.c" />
     <ClCompile Include="..\pocketnesrom.c" />
     <ClCompile Include="gtkmain.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\goombasav.h" />
-    <ClInclude Include="..\minilzo-2.06\lzoconf.h" />
-    <ClInclude Include="..\minilzo-2.06\lzodefs.h" />
-    <ClInclude Include="..\minilzo-2.06\minilzo.h" />
+    <ClInclude Include="..\minilzo\lzoconf.h" />
+    <ClInclude Include="..\minilzo\lzodefs.h" />
+    <ClInclude Include="..\minilzo\minilzo.h" />
     <ClInclude Include="..\pocketnesrom.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
