Allow files <64KB in GTK+ GUI

--- a/goombasav_gtk/Makefile
+++ b/goombasav_gtk/Makefile
@@ -1,5 +1,5 @@
 all: goombasav_gtk
 
-goombasav_gtk: gtkmain.c ../goombasav.c ../minilzo-2.06/minilzo.c
-	gcc -std=c99 -o goombasav_gtk gtkmain.c ../goombasav.c ../minilzo-2.06/minilzo.c `pkg-config --cflags --libs gtk+-2.0`
+goombasav_gtk: gtkmain.c ../goombasav.c ../minilzo/minilzo.c
+	gcc -std=c99 -o goombasav_gtk gtkmain.c ../goombasav.c ../minilzo/minilzo.c `pkg-config --cflags --libs gtk+-2.0`
 
