--- a/goombasav_net/goombasav_net.vcxproj
+++ b/goombasav_net/goombasav_net.vcxproj
@@ -96,7 +96,7 @@
     <ClInclude Include="..\pocketnesrom.h" />
     <ClInclude Include="..\smsadvancerom.h" />
     <ClInclude Include="cli_ExtractedROM.h" />
-    <ClInclude Include="cli_Configdata.h" />
+    <ClInclude Include="cli_GoombaConfigdata.h" />
     <ClInclude Include="cli_GoombaHeader.h" />
     <ClInclude Include="cli_GameBoyROM.h" />
     <ClInclude Include="cli_GoombaSRAM.h" />
