Add wrapper classes to support PocketNES and SMSAdvance configdatas - right now only title and ROM checksum are used

--- a/goombasav_net/goombasav_net.vcxproj
+++ b/goombasav_net/goombasav_net.vcxproj
@@ -100,7 +100,9 @@
     <ClInclude Include="cli_GoombaHeader.h" />
     <ClInclude Include="cli_GameBoyROM.h" />
     <ClInclude Include="cli_GoombaSRAM.h" />
+    <ClInclude Include="cli_PocketNESConfigdata.h" />
     <ClInclude Include="cli_PocketNESROM.h" />
+    <ClInclude Include="cli_SMSAdvanceConfigdata.h" />
     <ClInclude Include="cli_SMSAdvanceROM.h" />
     <ClInclude Include="cli_Stateheader.h" />
   </ItemGroup>
