--- a/vs2019/GoombasavCore/GoombasavCore.vcxproj.filters
+++ b/vs2019/GoombasavCore/GoombasavCore.vcxproj.filters
@@ -27,9 +27,6 @@
     <ClInclude Include="cli_GoombaHeader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="cli_GoombaSRAM.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="cli_PocketNESConfigdata.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -64,6 +61,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\minilzo\minilzo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cli_EmulatorSRAM.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
