--- a/vs2019/GBARomExtractCore/GBARomExtractCore.vcxproj
+++ b/vs2019/GBARomExtractCore/GBARomExtractCore.vcxproj
@@ -20,12 +20,11 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{D481111F-8E96-41CD-9E46-04FF10E5752E}</ProjectGuid>
+    <ProjectGuid>{632B37E4-8A8F-4B2A-950F-0390B11DDAEA}</ProjectGuid>
     <Keyword>NetCoreCProj</Keyword>
-    <RootNamespace>GoombasavCore</RootNamespace>
+    <RootNamespace>GBARomExtractCore</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <ProjectName>GoombasavCore</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -116,22 +115,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\goombasav.h" />
-    <ClInclude Include="..\..\minilzo\lzoconf.h" />
-    <ClInclude Include="..\..\minilzo\lzodefs.h" />
-    <ClInclude Include="..\..\minilzo\minilzo.h" />
-    <ClInclude Include="Configdata.h" />
-    <ClInclude Include="GoombaConfigdata.h" />
-    <ClInclude Include="EmulatorSRAMHeader.h" />
-    <ClInclude Include="EmulatorSRAM.h" />
-    <ClInclude Include="PocketNESConfigdata.h" />
-    <ClInclude Include="SMSAdvanceConfigdata.h" />
-    <ClInclude Include="Stateheader.h" />
+    <ClCompile Include="..\..\goombarom.c" />
+    <ClCompile Include="..\..\pocketnesrom.c" />
+    <ClCompile Include="..\..\smsadvancerom.c" />
+    <ClCompile Include="expose.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\goombasav.c" />
-    <ClCompile Include="..\..\minilzo\minilzo.c" />
-    <ClCompile Include="expose.cpp" />
+    <ClInclude Include="..\..\goombarom.h" />
+    <ClInclude Include="..\..\pocketnesrom.h" />
+    <ClInclude Include="..\..\smsadvancerom.h" />
+    <ClInclude Include="ExtractedROM.h" />
+    <ClInclude Include="GameBoyROM.h" />
+    <ClInclude Include="PocketNESROM.h" />
+    <ClInclude Include="SMSAdvanceROM.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
